k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metamorphosis
  labels:
    app: metamorphosis
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metamorphosis
